objects/SpaceBudgetAndForecast__c.object
<CustomObject>
    <description>&lt;SBF&gt; - Represents approved annualised amount for budget for CY and JV FY and forecast periods</description>
    <fields>
        <fullName>AnnualisedCashflowNet__c</fullName>
        <label>Annualised Cashflow (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedCashflowSemiGross__c</fullName>
        <label>Annualised Cashflow (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedPVRentGross__c</fullName>
        <label>Annualised PV Rent (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedPVRentNet__c</fullName>
        <label>Annualised PV Rent (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedPVRentSemiGross__c</fullName>
        <label>Annualised PV Rent (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentDecGross__c</fullName>
        <label>Annualised Rent (Dec) (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentDecNet__c</fullName>
        <label>Annualised Rent (Dec) (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentDecSemiGross__c</fullName>
        <label>Annualised Rent (Dec) (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentJanGross__c</fullName>
        <label>Annualised Rent (Jan) (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentJanNet__c</fullName>
        <label>Annualised Rent (Jan) (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualisedRentJanSemiGross__c</fullName>
        <label>Annualised Rent (Jan) (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualised_Stretch_Rent_Gross__c</fullName>
        <label>Annualised Stretch Rent (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualised_Stretch_Rent_Net__c</fullName>
        <label>Annualised Stretch Rent (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualised_Stretch_Rent_Semi_Gross__c</fullName>
        <label>Annualised Stretch Rent (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Process_Status_Reason__c</fullName>
        <label>Batch Process Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Process_Status__c</fullName>
        <label>Batch Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetedDealType__c</fullName>
        <label>Budgeted Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Semi Gross</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CapitalSiteEstablishment__c</fullName>
        <label>Capital (Site Establishment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommencementDate__c</fullName>
        <inlineHelpText>This date is the same as the effective date unless there is a delayed start.</inlineHelpText>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <inlineHelpText>The effective date is the year the budget relates to.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpiryDateatBudgetPeriod__c</fullName>
        <label>Expiry Date at Budget Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MiniProjectMajorCapitalContribution__c</fullName>
        <label>Mini Project/Major Capital-Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MiniProjectMajorCapitalDC__c</fullName>
        <label>Mini Project / Major Capital - D&amp;C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>JV Budget</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OperationalCapitalContribution__c</fullName>
        <label>Operational Capital - Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OperationalCapitalDC__c</fullName>
        <label>Operational Capital - D&amp;C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYCommittedDC__c</fullName>
        <label>PY Committed D&amp;C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYCommittedIncentive__c</fullName>
        <label>PY Committed Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYCommittedSiteEstablishmentDC__c</fullName>
        <label>PY Committed Site Establishment D&amp;C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayoutAmount__c</fullName>
        <label>Payout Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromotionalAllowance__c</fullName>
        <label>Promotional Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Space__r.Property__r.Name</formula>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <label>Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Space Budget and Forecast</relationshipLabel>
        <relationshipName>Space_Budget_and_Forecast</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREF_Id__c</fullName>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechLastIntegratedId__c</fullName>
        <label>Tech_LastIntegratedId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechLastIntegratedTimeStamp__c</fullName>
        <label>Tech_LastIntegratedTimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalCapital__c</fullName>
        <formula>OperationalCapitalContribution__c + OperationalCapitalDC__c + MiniProjectMajorCapitalContribution__c  +MiniProjectMajorCapitalDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VacancyProvision__c</fullName>
        <label>Vacancy Provision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Space Budget and Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property__c</columns>
        <columns>Space__c</columns>
        <columns>NAME</columns>
        <columns>PYCommittedIncentive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>whitford city</value>
        </filters>
        <filters>
            <field>Space__c</field>
            <operation>equals</operation>
            <value>MM1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Space Budget and Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Space Budget and Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBF_PVAnnualizedRentRequiredField</fullName>
        <active>false</active>
        <description>Either of these three rents should be provided Annualised PV Rent (Semi Gross) OR Annualised PV Rent (Net) OR Annualised PV Rent (Gross)</description>
        <errorConditionFormula>AND(ISBLANK( AnnualisedPVRentGross__c ),ISBLANK( AnnualisedPVRentNet__c ),ISBLANK( AnnualisedPVRentSemiGross__c ))</errorConditionFormula>
        <errorMessage>Either of these three rents should be provided Annualised PV Rent (Semi Gross) OR Annualised PV Rent (Net) OR Annualised PV Rent (Gross)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBF_ValidateDate</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
IF(YEAR(EffectiveDate__c) &gt; 3000, true, false), 
IF(YEAR(CommencementDate__c) &gt; 3000, true, false),
IF(YEAR(ExpiryDateatBudgetPeriod__c) &gt; 3000, true, false)
)</errorConditionFormula>
        <errorMessage>Year value should not exceed to 3000</errorMessage>
    </validationRules>
</CustomObject>